# minirun

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.sisyphus/run-continuation/: ses_0d207efc7ffea4dcosQdNDdwUt.json
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
config/: knowledge.yaml  mcp.yaml  security.yaml
docs/: PLAN.md
docs/adr/: ADR-001-runtime.md  ADR-002-provider.md  ADR-003-profiles.md  ADR-004-tools.md  ADR-005-memory.md  ADR-006-security.md  ADR-007-knowledge-store.md  ADR-008-state-machine.md  ADR-009-tool-executor.md
minirun/: boot.py  log.py
minirun/adapters/: anthropic.py  openai.py
minirun/cli/: knowledge_commands.py  main.py  styles.py
minirun/config/: __init__.py  loader.py  settings.yaml
minirun/memory/: __init__.py  _db.py  builder.py  extractor.py  knowledge.py  summaries.py
minirun/metrics/: __init__.py  replay.py
minirun/ports/: provider.py
minirun/profiles/: __init__.py  loader.py
minirun/providers/: __init__.py  anthropic.py  openai.py
minirun/runtime/: __init__.py  context.py  events.py  executor.py  harness.py  runtime.py  state.py
minirun/security/: __init__.py  policy.py
minirun/tools/: __init__.py  filesystem.py  http.py  mcp.py  registry.py  shell.py
minirun/workspace/: __init__.py  discovery.py  executor.py  mcp_manager.py  models.py  workspace.py
specs/001-core-runtime/: spec.md
specs/002-provider-workspace/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/cli/: test_hooks.py  test_main.py
tests/config/: test_config.py  test_settings.py
tests/integration/: test_e2e.py
tests/memory/: test_journal.py  test_knowledge.py  test_retrieval.py  test_summaries.py
tests/metrics/: test_metrics.py  test_replay.py
tests/profiles/: test_loader.py  test_profile_loading.py  test_profiles.py
tests/providers/: test_anthropic.py  test_base.py  test_openai.py
tests/runtime/: test_harness.py  test_state.py
tests/security/: test_confirmation_policy.py  test_policy.py
tests/tools/: test_filesystem.py  test_shell.py
tests/workspace/: test_commands_skills.py  test_models.py  test_workspace.py  (+1 more)
(+52 files in other folders)
